--- a/2_SIRIUS_CSI.ipynb
+++ b/2_SIRIUS_CSI.ipynb
@@ -34,6 +34,7 @@
     "import glob\n",
     "import sys\n",
     "import pandas as pd\n",
+    "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *"
    ]
   },
