--- a/4_Requantification.ipynb
+++ b/4_Requantification.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,6 +46,7 @@
     "import glob\n",
     "import sys\n",
     "import pandas as pd\n",
+    "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *"
    ]
   },
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -545,10 +546,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>peptide_sequence</th>\n",
-       "      <th>peptide_score</th>\n",
-       "      <th>ID_filename</th>\n",
-       "      <th>ID_native_id</th>\n",
        "      <th>charge</th>\n",
        "      <th>RT</th>\n",
        "      <th>mz</th>\n",
@@ -570,19 +567,11 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>922721197336210104</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>472.035931</td>\n",
        "      <td>228.195237</td>\n",
@@ -595,10 +584,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3749305416046817057</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>278.264785</td>\n",
        "      <td>399.234437</td>\n",
@@ -611,10 +596,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17279903300824344528</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>265.615375</td>\n",
        "      <td>458.260560</td>\n",
@@ -627,10 +608,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10608986683863263200</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>341.762028</td>\n",
        "      <td>197.106782</td>\n",
@@ -643,10 +620,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9388485544539895794</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>368.214485</td>\n",
        "      <td>516.245484</td>\n",
@@ -668,17 +641,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7667443987467879461</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>338.916323</td>\n",
        "      <td>360.191682</td>\n",
@@ -691,10 +656,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8435625749200995548</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>296.530783</td>\n",
        "      <td>588.299500</td>\n",
@@ -707,10 +668,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13558774529073989722</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>365.567498</td>\n",
        "      <td>489.197785</td>\n",
@@ -723,10 +680,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>641303894023994857</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>577.089845</td>\n",
        "      <td>452.321351</td>\n",
@@ -739,10 +692,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9114246874544450272</th>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>86.919952</td>\n",
        "      <td>438.196595</td>\n",
@@ -755,24 +704,10 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6640 rows × 13 columns</p>\n",
+       "<p>6640 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     peptide_sequence  peptide_score ID_filename ID_native_id  \\\n",
-       "feature_id                                                                      \n",
-       "922721197336210104               None            NaN        None         None   \n",
-       "3749305416046817057              None            NaN        None         None   \n",
-       "17279903300824344528             None            NaN        None         None   \n",
-       "10608986683863263200             None            NaN        None         None   \n",
-       "9388485544539895794              None            NaN        None         None   \n",
-       "...                               ...            ...         ...          ...   \n",
-       "7667443987467879461              None            NaN        None         None   \n",
-       "8435625749200995548              None            NaN        None         None   \n",
-       "13558774529073989722             None            NaN        None         None   \n",
-       "641303894023994857               None            NaN        None         None   \n",
-       "9114246874544450272              None            NaN        None         None   \n",
-       "\n",
        "                      charge          RT          mz     RTstart       RTend  \\\n",
        "feature_id                                                                     \n",
        "922721197336210104         1  472.035931  228.195237  461.128510  487.262421   \n",
@@ -801,7 +736,7 @@
        "641303894023994857    452.320220  452.322482  3.833982  3.954314e+07  \n",
        "9114246874544450272   438.195500  438.197691  4.388623  7.789643e+06  \n",
        "\n",
-       "[6640 rows x 13 columns]"
+       "[6640 rows x 9 columns]"
       ]
      },
      "metadata": {},
@@ -814,7 +749,7 @@
     "for filename in input_feature_files:\n",
     "    fmap = FeatureMap()\n",
     "    FeatureXMLFile().load(filename, fmap)\n",
-    "    DF= fmap.get_df()\n",
+    "    DF= fmap.get_df(export_peptide_identifications=False)\n",
     "    feature_csv= os.path.join(\"results\", \"\", \"Requant\", \"\", 'FFMI_' +  os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[11:-5] +\".csv\")\n",
     "    DF.to_csv(feature_csv) #it is not necessary to save those files, unless you would like to compare the number of features before and after requantification like I do below\n",
     "print(os.path.basename(filename))\n",
@@ -1217,7 +1152,7 @@
     "ConsensusXMLFile().store(Consensus_file, consensus_map)\n",
     "\n",
     "# get intensities as a DataFrame\n",
-    "result = consensus_map.get_df()\n",
+    "result = consensus_map.get_df(export_peptide_identifications=False)\n",
     "result= result.reset_index()\n",
     "result= result.drop(columns= [\"id\", \"sequence\", \"quality\"])\n",
     "# store as tsv file\n",
@@ -1581,7 +1516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
