Need to change filenames and Annotation workflow (see SIRIUS issue)

--- a/2_SIRIUS_CSI.ipynb
+++ b/2_SIRIUS_CSI.ipynb
@@ -33,9 +33,9 @@
     "import os\n",
     "import glob\n",
     "import sys\n",
-    "import pandas as pd\n",
     "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
-    "from pyopenms import *"
+    "from pyopenms import *\n",
+    "import shutil"
    ]
   },
   {
@@ -86,74 +86,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path= \"results/interim/sirius\"\n",
-    "isExist= os.path.exists(path)\n",
-    "if not isExist:\n",
+    "path = os.path.join(\"results\", \"interim\", \"sirius\")\n",
+    "try:\n",
+    "    shutil.rmtree(path)\n",
+    "    os.mkdir(path)\n",
+    "except OSError:\n",
     "    os.mkdir(path)\n",
     "\n",
+    "feature_files = glob.glob('results/interim/preprocess/MFD_*.featureXML')\n",
     "\n",
-    "input_mzml_files = glob.glob('results/interim/mzML/PCpeak_*.mzML')\n",
+    "feature_maps = []\n",
+    "for file in feature_files:\n",
+    "    fmap = FeatureMap()\n",
+    "    FeatureXMLFile().load(file, fmap)\n",
+    "    feature_maps.append(fmap)\n",
     "\n",
-    "for filename in input_mzml_files:\n",
-    "    exp = MSExperiment()\n",
-    "    MzMLFile().load(filename, exp)\n",
-    "    exp.sortSpectra(True)\n",
-    "\n",
-    "    mass_traces = []\n",
-    "    mtd = MassTraceDetection()\n",
-    "    mtd_par = mtd.getDefaults()\n",
-    "    mtd_par.setValue(\"mass_error_ppm\", 10.0) \n",
-    "    mtd_par.setValue(\"noise_threshold_int\", 1.0e04)\n",
-    "    mtd.setParameters(mtd_par)\n",
-    "    mtd.run(exp, mass_traces, 0)\n",
-    "\n",
-    "    mass_traces_split = []\n",
-    "    mass_traces_final = []\n",
-    "    epd = ElutionPeakDetection()\n",
-    "    epd_par = epd.getDefaults()\n",
-    "    epd_par.setValue(\"width_filtering\", \"fixed\")\n",
-    "    epd.setParameters(epd_par)\n",
-    "    epd.detectPeaks(mass_traces, mass_traces_split)\n",
-    "        \n",
-    "    if (epd.getParameters().getValue(\"width_filtering\") == \"auto\"):\n",
-    "        epd.filterByPeakWidth(mass_traces_split, mass_traces_final)\n",
-    "    else:\n",
-    "        mass_traces_final = mass_traces_split\n",
-    "\n",
-    "    feature_map_FFM = FeatureMap()\n",
-    "    feat_chrom = []\n",
-    "    ffm = FeatureFindingMetabo()\n",
-    "    ffm_par = ffm.getDefaults() \n",
-    "    ffm_par.setValue(\"isotope_filtering_model\", \"none\")\n",
-    "    ffm_par.setValue(\"remove_single_traces\", \"false\")\n",
-    "    ffm_par.setValue(\"mz_scoring_by_elements\", \"false\")\n",
-    "    ffm.setParameters(ffm_par)\n",
-    "    ffm.run(mass_traces_final, feature_map_FFM, feat_chrom)\n",
-    "    feature_map_FFM.setUniqueIds()\n",
-    "    feature_map_FFM.setPrimaryMSRunPath([filename.encode()])\n",
-    "\n",
-    "    mfd = MetaboliteFeatureDeconvolution()\n",
-    "    mdf_par = mfd.getDefaults()\n",
-    "    mdf_par.setValue(\"potential_adducts\",  [b\"H:+:0.4\",b\"Na:+:0.2\",b\"NH4:+:0.2\", b\"H-1O-1:+:0.1\", b\"H-3O-2:+:0.1\"])  \n",
-    "    mdf_par.setValue(\"charge_min\", 1, \"Minimal possible charge\")\n",
-    "    mdf_par.setValue(\"charge_max\", 1, \"Maximal possible charge\")\n",
-    "    mdf_par.setValue(\"charge_span_max\", 1)\n",
-    "    mdf_par.setValue(\"max_neutrals\", 1)\n",
-    "    mfd.setParameters(mdf_par)\n",
-    "    feature_map_MFD = FeatureMap()\n",
-    "    cons_map0 = ConsensusMap()\n",
-    "    cons_map1 = ConsensusMap()\n",
-    "    mfd.compute(feature_map_FFM, feature_map_MFD, cons_map0, cons_map1)\n",
+    "for fm in feature_maps:\n",
+    "    fm_no_sub = FeatureMap(fm)\n",
+    "    fm_no_sub.clear(False)\n",
+    "    for f in fm:\n",
+    "        f.setConvexHulls([])\n",
+    "        f.setSubordinates([])\n",
+    "        fm_no_sub.push_back(f)\n",
     "    \n",
-    "    featureinfo = os.path.join(path, 'MFD_noconvexhulls_' + os.path.basename(filename)[:-5] + \".featureXML\")\n",
-    "    FeatureXMLFile().store(featureinfo, feature_map_MFD)\n",
-    "\n",
-    "    PrecursorCorrection.correctToNearestFeature(feature_map_MFD, exp, 0.0, 100.0, True, False, False, False, 3, 0)\n",
-    "\n",
     "    sirius_algo = SiriusAdapterAlgorithm()\n",
     "    sirius_algo_par = sirius_algo.getDefaults()\n",
     "    sirius_algo_par.setValue(\"preprocessing:filter_by_num_masstraces\", 2) #Number of mass traces each feature has to have to be included\n",
-    "    sirius_algo_par.setValue(\"preprocessing:feature_only\", \"true\") #Uses the feature information from in_featureinfo to reduce the search space to MS2\n",
+    "    sirius_algo_par.setValue(\"preprocessing:feature_only\", \"true\") #Uses the feature information from in_fm_no_sub to reduce the search space to MS2\n",
     "    sirius_algo_par.setValue(\"sirius:profile\", \"orbitrap\")\n",
     "    sirius_algo_par.setValue(\"sirius:db\", \"none\")\n",
     "    sirius_algo_par.setValue(\"sirius:ions_considered\", \"[M+H]+, [M-H2O+H]+, [M+Na]+, [M+NH4]+\")\n",
@@ -165,11 +124,11 @@
     "\n",
     "    fm_info = FeatureMapping_FeatureMappingInfo()\n",
     "    feature_mapping = FeatureMapping_FeatureToMs2Indices() \n",
-    "    sirius_algo.preprocessingSirius(featureinfo,\n",
+    "    sirius_algo.preprocessingSirius(fm_no_sub,\n",
     "                                    exp,\n",
     "                                    fm_info,\n",
     "                                    feature_mapping)\n",
-    "    sirius_algo.logFeatureSpectraNumber(featureinfo, \n",
+    "    sirius_algo.logFeatureSpectraNumber(fm_no_sub, \n",
     "                                        feature_mapping,\n",
     "                                        exp)\n",
     "    msfile = SiriusMSFile()\n",
