--- a/3_GNPSExport.ipynb
+++ b/3_GNPSExport.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +26,7 @@
     "import glob\n",
     "import sys\n",
     "import pandas as pd\n",
+    "sys.path.insert(0, '/Users/eeko/openms-develop/openms_build/pyOpenMS')\n",
     "from pyopenms import *"
    ]
   },
@@ -267,9 +268,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c87bf4b9",
    "metadata": {},
    "source": [
-    "#### `2) File Filter` \n",
+    "#### `2) IDMapper` \n",
+    "\n",
+    "Introduce the features to a protein identification file (idXML)- the only way to annotate MS2 spectra for GNPS FBMN  (of later importance)\n",
+    "\n",
+    "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/TOPP_IDMapper.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da23bb57",
+   "metadata": {},
+   "source": [
+    "Import aligned feature files and load them to a FeatureMap() file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cd5e6f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_feature_files = sorted(glob.glob(\"results/interim/preprocess/MapAligned*.featureXML\"))\n",
+    "\n",
+    "feature_maps = []\n",
+    "for featurexml_file in input_feature_files:\n",
+    "    fmap = FeatureMap()\n",
+    "    FeatureXMLFile().load(featurexml_file, fmap)\n",
+    "    feature_maps.append(fmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2e40eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_centroid_rt= False\n",
+    "use_centroid_mz= True\n",
+    "protein_ids = []\n",
+    "peptide_ids= []\n",
+    "\n",
+    "mapper = IDMapper()\n",
+    "\n",
+    "input_mzml_files= sorted(glob.glob(\"results/interim/mzML/PCfeature_*.mzML\"))\n",
+    "\n",
+    "for filename in input_mzml_files:\n",
+    "    exp = MSExperiment()\n",
+    "    MzMLFile().load(filename, exp)\n",
+    "\n",
+    "    for fmap in feature_maps:\n",
+    "        peptide_ids = []\n",
+    "        protein_ids = []\n",
+    "        if os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[7:] == os.path.basename(filename)[10:]:\n",
+    "            mapper.annotate(fmap, peptide_ids, protein_ids, use_centroid_rt, use_centroid_mz, exp)\n",
+    "            featureidx_file = os.path.join(path, 'IDMapper_' + os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[7:-5] +\".featureXML\")\n",
+    "            FeatureXMLFile().store(featureidx_file, fmap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `3) File Filter` \n",
     "\n",
     "Remove the features that do not have an MS2 pattern\n",
     "\n",
@@ -278,29 +344,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5591 spectra and 1 chromatograms stored.\n",
-      "5236 spectra and 1 chromatograms stored.\n",
-      "5470 spectra and 1 chromatograms stored.\n",
-      "5610 spectra and 1 chromatograms stored.\n",
-      "5587 spectra and 1 chromatograms stored.\n",
-      "4857 spectra and 1 chromatograms stored.\n",
-      "5682 spectra and 1 chromatograms stored.\n",
-      "5402 spectra and 1 chromatograms stored.\n",
-      "5476 spectra and 1 chromatograms stored.\n",
-      "5572 spectra and 1 chromatograms stored.\n",
-      "5471 spectra and 1 chromatograms stored.\n",
-      "5547 spectra and 1 chromatograms stored.\n",
-      "ConsensusXMLFile::store():  found 4967 invalid unique ids\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path= \"results/interim/GNPSexport\"\n",
     "isExist= os.path.exists(path)\n",
@@ -324,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `3) GNPSexport `\n",
+    "#### `4) GNPSexport `\n",
     "\n",
     "The algorithm creates an MGF file with only the MS2 information of all files (introduce mzml files with spaces between them)\n",
     "\n",
@@ -353,209 +399,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `4) FeatureQuantificationTable.txt`\n",
+    "#### `5) FeatureQuantificationTable.txt`\n",
     "\n",
     "Convert the consensusXML file to a txt file for GNPS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>#CONSENSUS</th>\n",
-       "      <th>charge_cf</th>\n",
-       "      <th>mz_cf</th>\n",
-       "      <th>quality_cf</th>\n",
-       "      <th>intensity_0</th>\n",
-       "      <th>intensity_1</th>\n",
-       "      <th>intensity_2</th>\n",
-       "      <th>rt_cf</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>425.191983</td>\n",
-       "      <td>0.000159</td>\n",
-       "      <td>1264746.0</td>\n",
-       "      <td>1173103.0</td>\n",
-       "      <td>1.474770e+06</td>\n",
-       "      <td>334.096742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>391.207600</td>\n",
-       "      <td>0.000869</td>\n",
-       "      <td>8320771.0</td>\n",
-       "      <td>9281256.0</td>\n",
-       "      <td>5.997076e+06</td>\n",
-       "      <td>297.952191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>276.170596</td>\n",
-       "      <td>0.000645</td>\n",
-       "      <td>3385304.0</td>\n",
-       "      <td>4940469.0</td>\n",
-       "      <td>7.567933e+06</td>\n",
-       "      <td>250.409814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>666.245461</td>\n",
-       "      <td>0.000235</td>\n",
-       "      <td>3346225.0</td>\n",
-       "      <td>1328792.0</td>\n",
-       "      <td>7.221029e+05</td>\n",
-       "      <td>50.471348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>392.155243</td>\n",
-       "      <td>0.000483</td>\n",
-       "      <td>6476619.0</td>\n",
-       "      <td>1826704.0</td>\n",
-       "      <td>3.281519e+06</td>\n",
-       "      <td>74.517260</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1723</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>157.097127</td>\n",
-       "      <td>0.003737</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.489755e+07</td>\n",
-       "      <td>87.513134</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1724</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>383.242903</td>\n",
-       "      <td>0.000180</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.144606e+06</td>\n",
-       "      <td>607.910275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1725</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>897.408915</td>\n",
-       "      <td>0.000196</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.132445e+06</td>\n",
-       "      <td>565.561475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1726</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>424.326815</td>\n",
-       "      <td>0.000199</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.257178e+06</td>\n",
-       "      <td>520.186074</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1727</th>\n",
-       "      <td>CONSENSUS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>270.192480</td>\n",
-       "      <td>0.001075</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.080211e+06</td>\n",
-       "      <td>273.481611</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1728 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     #CONSENSUS  charge_cf       mz_cf  quality_cf  intensity_0  intensity_1  \\\n",
-       "0     CONSENSUS          1  425.191983    0.000159    1264746.0    1173103.0   \n",
-       "1     CONSENSUS          1  391.207600    0.000869    8320771.0    9281256.0   \n",
-       "2     CONSENSUS          1  276.170596    0.000645    3385304.0    4940469.0   \n",
-       "3     CONSENSUS          1  666.245461    0.000235    3346225.0    1328792.0   \n",
-       "4     CONSENSUS          1  392.155243    0.000483    6476619.0    1826704.0   \n",
-       "...         ...        ...         ...         ...          ...          ...   \n",
-       "1723  CONSENSUS          1  157.097127    0.003737          0.0          0.0   \n",
-       "1724  CONSENSUS          1  383.242903    0.000180          0.0          0.0   \n",
-       "1725  CONSENSUS          1  897.408915    0.000196          0.0          0.0   \n",
-       "1726  CONSENSUS          1  424.326815    0.000199          0.0          0.0   \n",
-       "1727  CONSENSUS          1  270.192480    0.001075          0.0          0.0   \n",
-       "\n",
-       "       intensity_2       rt_cf  \n",
-       "0     1.474770e+06  334.096742  \n",
-       "1     5.997076e+06  297.952191  \n",
-       "2     7.567933e+06  250.409814  \n",
-       "3     7.221029e+05   50.471348  \n",
-       "4     3.281519e+06   74.517260  \n",
-       "...            ...         ...  \n",
-       "1723  2.489755e+07   87.513134  \n",
-       "1724  1.144606e+06  607.910275  \n",
-       "1725  1.132445e+06  565.561475  \n",
-       "1726  1.257178e+06  520.186074  \n",
-       "1727  7.080211e+06  273.481611  \n",
-       "\n",
-       "[1728 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_consensus= \"results/interim/GNPSexport/filtered.consensusXML\"\n",
     "cmap = ConsensusMap()\n",
@@ -708,13 +561,6 @@
     "with open(merged_file, \"w\") as merged_file:\n",
     "    merged_file.write(map_text + feature_text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
